--- a/_includes/footer_short.html
+++ b/_includes/footer_short.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <p class="disclaimer">
-        Open Web Application Security Project, OWASP, Global AppSec, AppSec Days, AppSec California, SnowFROC, LASCON, and the OWASP logo are trademarks of the OWASP Foundation. Unless otherwise specified, all content on the site is Creative Commons Attribution-ShareAlike v4.0 and provided without warranty of service or accuracy. For more information, please refer to our <a href="/www-policy/operational/general-disclaimer.html">General Disclaimer</a>. Copyright {{ "now" | date: "%Y" }}, OWASP Foundation, Inc.      
+        Open Worldwide Application Security Project, OWASP, Global AppSec, AppSec Days, AppSec California, SnowFROC, LASCON, and the OWASP logo are trademarks of the OWASP Foundation. Unless otherwise specified, all content on the site is Creative Commons Attribution-ShareAlike v4.0 and provided without warranty of service or accuracy. For more information, please refer to our <a href="/www-policy/operational/general-disclaimer.html">General Disclaimer</a>. Copyright {{ "now" | date: "%Y" }}, OWASP Foundation, Inc.      
     </p>
   </section>
 </footer>
